test/must_fail/api/must_fail_ngspice_init2.ngjs
#!/usr/bin/env ngspicejs
// ngspice init is already called in core, don't call it twice
// linter: ngspicejs-lint
"use strict";

Internal.ngspice_init();
